--- a/pom.xml
+++ b/pom.xml
@@ -39,14 +39,34 @@
   		<version>1.4.5.RELEASE</version>
   	</dependency>
   	<dependency>
-  		<groupId>org.projectlombok</groupId>
-  		<artifactId>lombok</artifactId>
-  		<version>1.16.14</version>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-starter-test</artifactId>
+  		<version>1.4.5.RELEASE</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.mybatis.spring.boot</groupId>
+  		<artifactId>mybatis-spring-boot-starter</artifactId>
+  		<version>1.2.0</version>
   	</dependency>
   	<dependency>
   		<groupId>org.apache.httpcomponents</groupId>
   		<artifactId>httpasyncclient</artifactId>
   		<version>4.1.3</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.alibaba</groupId>
+  		<artifactId>druid</artifactId>
+  		<version>1.0.27</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.microsoft.sqlserver</groupId>
+  		<artifactId>sqljdbc4</artifactId>
+  		<version>4.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.projectlombok</groupId>
+  		<artifactId>lombok</artifactId>
+  		<version>1.16.14</version>
   	</dependency>
   </dependencies>
 </project>
