--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
   	</dependency>
   	<dependency>
   		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-starter-cache</artifactId>
+  		<version>1.4.5.RELEASE</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework.boot</groupId>
   		<artifactId>spring-boot-starter-test</artifactId>
   		<version>1.4.5.RELEASE</version>
   	</dependency>
@@ -49,9 +54,9 @@
   		<version>1.2.0</version>
   	</dependency>
   	<dependency>
-  		<groupId>org.apache.httpcomponents</groupId>
-  		<artifactId>httpasyncclient</artifactId>
-  		<version>4.1.3</version>
+  		<groupId>com.microsoft.sqlserver</groupId>
+  		<artifactId>sqljdbc4</artifactId>
+  		<version>4.0</version>
   	</dependency>
   	<dependency>
   		<groupId>com.alibaba</groupId>
@@ -59,9 +64,19 @@
   		<version>1.0.27</version>
   	</dependency>
   	<dependency>
-  		<groupId>com.microsoft.sqlserver</groupId>
-  		<artifactId>sqljdbc4</artifactId>
-  		<version>4.0</version>
+  		<groupId>net.sf.ehcache</groupId>
+  		<artifactId>ehcache</artifactId>
+  		<version>2.10.3</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.httpcomponents</groupId>
+  		<artifactId>httpasyncclient</artifactId>
+  		<version>4.1.3</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.google.guava</groupId>
+  		<artifactId>guava</artifactId>
+  		<version>21.0</version>
   	</dependency>
   	<dependency>
   		<groupId>org.projectlombok</groupId>
