预定预览页面 标题过长 样式调整 log 位置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=80
 #logback
 logging.level.org.springframework=warn
 logging.level.com.xyauto=debug
-#logging.path=./logs
+logging.path=../xyauto_meet_log
 
 mybatis.type-aliases-package=com.xyauto.pojo
 mybatis.mapper-locations=classpath:/mapper/*Mapper.xml
