--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=80
 
 #logback
-logging.level.org.springframework=warn
-logging.level.com.xyauto=debug
-logging.path=./xyauto_meet_log
+#logging.level.org.springframework=warn
+#logging.level.com.xyauto=debug
+#logging.path=./xyauto_meet_log
 
 mybatis.type-aliases-package=com.xyauto.pojo
 mybatis.mapper-locations=classpath:/mapper/*Mapper.xml
