--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,16 @@ server.port=80
 #logging.level.com.xyauto=debug
 #logging.path=./xyauto_meet_log
 
+#oa
+com.xyauto.WEB_SERVICE = http://hr.oa1.xingyuanauto.com
+com.xyauto.GET_OA_CHECK = http://oa1.xingyuanauto.com/hrwebapi/Authorize/Check
+com.xyauto.GET_OA_USER = http://oa1.xingyuanauto.com/hrwebapi/EmployeeForPortal/GetEmpForPortal
+#Role
+com.xyauto.SYSTEM_ID = SYS023
+com.xyauto.MEETING_MANAGER = MOD0001
+com.xyauto.SCHEDULED_PREVIEW = MOD0002
+com.xyauto.AUTHORIZE_MANAGER = MOD0003
+
 mybatis.type-aliases-package=com.xyauto.pojo
 mybatis.mapper-locations=classpath:/mapper/*Mapper.xml
 mybatis.configuration.map-underscore-to-camel-case=true
