--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,22 @@ server.port=80
 #logging.level.com.xyauto=debug
 #logging.path=./xyauto_meet_log
 
-#oa
-com.xyauto.WEB_SERVICE = http://hr.oa1.xingyuanauto.com
+#oa test
+com.xyauto.WEB_SERVICE = http://hr.oa1.xingyuanauto.com/webservice/EmployeeService.asmx?wsdl
 com.xyauto.GET_OA_CHECK = http://oa1.xingyuanauto.com/hrwebapi/Authorize/Check
 com.xyauto.GET_OA_USER = http://oa1.xingyuanauto.com/hrwebapi/EmployeeForPortal/GetEmpForPortal
-#Role
+com.xyauto.MESSAGE_API_URL = http://192.168.3.51:8002/PushMessage.ashx?mode=general
+#system id test
 com.xyauto.SYSTEM_ID = SYS023
+
+#oa
+#com.xyauto.WEB_SERVICE = http://hr.oa.xingyuanauto.com/webservice/EmployeeService.asmx?wsdl
+#com.xyauto.GET_OA_CHECK = http://oa.xingyuanauto.com/hrwebapi/Authorize/Check
+#com.xyauto.GET_OA_USER = http://oa.xingyuanauto.com/hrwebapi/EmployeeForPortal/GetEmpForPortal
+#com.xyauto.MESSAGE_API_URL = http://api.bluebird.xingyuanauto.com/PushMessage.ashx?mode=general
+#system id
+#com.xyauto.SYSTEM_ID = SYS024
+
 com.xyauto.MEETING_MANAGER = MOD0001
 com.xyauto.SCHEDULED_PREVIEW = MOD0002
 com.xyauto.AUTHORIZE_MANAGER = MOD0003
